--- a/application/FSPOC-WebProject/Content/scss/Common.scss
+++ b/application/FSPOC-WebProject/Content/scss/Common.scss
@@ -1,18 +1,19 @@
 ﻿.ui-dialog {
-    .ui-dialog {
-        padding: 0px 0px;
-        border: 1px solid black;
-        border-radius: 4px;
-    }
+    position:fixed !important; //hack for jQueryUI setting position:absolute and mispositioning dialogs
+    padding: 0px 0px;
+    border: 1px solid black;
+    border-radius: 4px;
+
     .ui-widget-header {
         background-image: none;
         background-color: #2d74b2;
         color: white;
     }
-    .ui-dialog .ui-dialog-buttonpane {
+    .ui-dialog-buttonpane {
         padding: 3px;
+        border-radius: 4px;
     }
-    .ui-dialog .ui-dialog-buttonset button {
+    .ui-dialog-buttonset button {
         margin: 3px;
     }
     .ui-dialog-titlebar-close {
